# SQL_PopUps

./: CMakeLists.txt  main.cpp  main.qml  test.cpp  test.h
